Resolve login and signup layout issues

--- a/frontend/src/pages/Login.module.css
+++ b/frontend/src/pages/Login.module.css
@@ -1,24 +1,18 @@
 .layout {
     display: flex;
     flex-flow: column wrap;
-    align-content: center;
-    gap: 50px;
+    align-items: center;
+    gap: 30px;
 }
 
 .section {
     display: flex;
     justify-content: center;
+    gap: 40px;
     flex-basis: 80%;
-    font-family: sans-serif;
 }
 
 .logo {
-    margin-top: 150px;
+    margin-top: 35px;
     align-content: center;
-}
-
-.user-selector {
-    color: #b7b7b7;
-    align-content: center;
-    border-radius: 5px;
 }
